<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CasificAndroidCourse</string>
    <string name="title">Yossi Shaik</string>

    <string name="facebook_app_id">938434806230258</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="gallery">Gallery</string>
    <string name="about">About</string>
    <string name="navigate">Navigate</string>
    <string name="contact">Contact</string>

    <string name="other">Other</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="delete">Delete</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="facebook">Facebook</string>
    <string name="ok_got_it">OK, got it.</string>
    <string name="sign_in_with_facebook">LOG IN WITH FACEBOOK</string>
    <string name="guest">Guest</string>
    <string name="our_address">Address</string>
    <string name="no_navigation_app_installed">To navigate you\'ll need a navigation app to be installed, such as Maps or Waze.</string>
    <string name="could_not_dial">Couldn\'t perform the phone call</string>
    <string name="non_valid_email">Enter email address</string>
    <string name="missing_name">Enter name</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="about_text">About me</string>
    <string name="radio">Radio</string>
    <string name="bonus">Bonus</string>

    <string-array name="drawer_list">
        <item>Facebook</item>
        <item>Email</item>
        <item>LinkedIn</item>
        <item>CV</item>
        <item>ebay</item>
        <item>YouTube</item>

    </string-array>
</resources>
